# effm

./: .gitignore  README.md  compile.sh  environment.yml  pyproject.toml
src/effm/: __init__.py  common_config.py  constants.py  data_handler.py  exam.py  excel_template.py  form.py  latex.py  student.py  utils.py
tests/: config_excel_template.yml  config_form.yml  excel_template.xlsx  filled_excel_file.xlsx  test_all.py  test_excel_template.py
tutorials/: .~lock.filled_excel_file.xlsx#  cfg_form.yml  classe_list.xlsx  config_excel_template.yml  config_form.yml  excel_template.xlsx  excel_template_for_test.xlsx  filled_excel_file.xlsx  make_excel_template.py  make_forms.py  run_test.py
tutorials/output/: 00Licence_3_CC1_Mécanique_quantique_FeedbackForm_All.tex  00Licence_3_CC1_Mécanique_quantique_FeedbackForm_WoAbsent.tex  00Licence_CC_FeedbackForm_All.tex  00Licence_CC_FeedbackForm_Anonymous.tex  00Licence_CC_FeedbackForm_WoAbsent.tex  00SMITHEE_Alan_FeedbackForm.tex  DE_VANNES_Karadoc_FeedbackForm.tex  DU_LAC_Lancelot_FeedbackForm.tex  LE_GAULOIS_Provençal_FeedbackForm.tex  Le_Gaulois_Provençal_FeedbackForm.tex  PENDRAGON_Arthur_FeedbackForm.tex  Pendragon_Arthur_FeedbackForm.tex  log
